# pararellQuicksort

./: CMakeLists.txt  main.c  worker.c
Debug/: pararellQuicksort  worker
